--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "brotli": "^1.3.2",
     "co": "^4.6.0",
     "colorful": "^2.1.0",
+    "eslint": "^6.5.1",
     "iconv-lite": "^0.4.6",
     "inquirer": "^5.2.0",
     "ip": "^0.3.2",
