--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "brotli": "^1.3.2",
     "co": "^4.6.0",
     "colorful": "^2.1.0",
-    "eslint": "^6.5.1",
     "iconv-lite": "^0.4.6",
     "inquirer": "^5.2.0",
     "ip": "^0.3.2",
@@ -27,6 +26,10 @@
     "request": "^2.74.0",
     "stream-throttle": "^0.1.3",
     "ws": "^5.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^2.0.0",
+    "eslint-config-ideal": "^0.1.0"
   },
   "deprecated": false,
   "description": "A Proxy Server implementation in JS based on AnyProxy with additional functionalities",
